--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "你截一百张和他的聊天记录，他也不是你的；你抄一百遍书，知识就是你的。"
 ---
 
 {% for post in paginator.posts %}
